--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-# We'll write a complete HTML file with improved parsing for the VSP PDF "Covered" block.
-html = r"""<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
